[package]
name = "steward"
description = "Task runner and process manager for Rust"
version = "0.0.3"
authors = ["Alex Fedoseev <alex@fedoseev.mx>"]
readme = "./README.md"
homepage = "https://github.com/alexfedoseev/steward"
repository = "https://github.com/alexfedoseev/steward"
documentation = "https://docs.rs/steward"
license = "MIT"
edition = "2021"
keywords = ["command", "process", "env"]
exclude = ["examples/*"]
autoexamples = false

[features]
default = ["tls"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "fs", "net", "time", "process", "signal", "io-util", "macros"] }
console = "0.14.1"
thiserror = "1.0"
rand = "0.8.3"
once_cell = "1.17.1"
async-trait = "0.1.50"
hyper = { version = "0.14.5", features = ["client", "tcp", "http1"] }
tls = { package = "hyper-tls", version = "0.5.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi"] }
