[package]
name = "steward-demo"
version = "0.0.0"
authors = ["Alex Fedoseev <alex@fedoseev.mx>"]
license = "MIT"
edition = "2018"

[[bin]]
name = "steward-demo"
path = "./cli/main.rs"

[dependencies]
steward = { path = "../" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
dotenv = "0.15.0"

[workspace]
members = [
  "server"
]
