[package]
name = "steward-demo"
version = "0.0.0"
authors = ["Alex Fedoseev <alex@35mil.me>"]
license = "MIT"
edition = "2021"

[[bin]]
name = "steward-demo"
path = "./cli/main.rs"

[dependencies]
steward = { path = "../" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.1.8", features = ["derive"] }
dotenv = "0.15.0"

[workspace]
members = [
  "server"
]
